<resources>
    <string name="app_name">Library\ Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_book">Add book</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="book_name">Book name</string>
    <string name="add">Add</string>
    <string name="change_book">Change book</string>
    <string name="change">Change</string>
</resources>