<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fragment.UpdateBookFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white">

    <TextView
        android:text="@string/change_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/main_color"
        android:padding="6dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_changing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_btn_back"
        android:text="@string/change"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>